# wmain

./: .gitignore  CMakeLists.txt  README.md  wmain.c  wmain.manifest
test/: CMakeLists.txt  direct_io.c  echo.c  execution_charset.c  utf8_io.cpp  wide_io.cpp  win32_gui.cpp
words/: CMakeLists.txt  main.c  word-gb18030-bom.txt  word-gb18030-nobom.txt  word-gbk.txt  word-utf16be-bom.txt  word-utf16be-nobom.txt  word-utf16le-bom.txt  word-utf16le-nobom.txt  word-utf8-bom.txt  word-utf8-nobom.txt
